--- a/ArtToGeometryDash/ArtToGeometryDash.csproj
+++ b/ArtToGeometryDash/ArtToGeometryDash.csproj
@@ -32,9 +32,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GeometryDashAPI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Andrey\Desktop\GeometryDashAPI.dll</HintPath>
+    <Reference Include="GeometryDashAPI">
+      <HintPath>K:\GeometryDashAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
