--- a/ArtToGeometryDash/ArtToGeometryDash.csproj
+++ b/ArtToGeometryDash/ArtToGeometryDash.csproj
@@ -3,10 +3,11 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="GeometryDashAPI" Version="0.1.14" />
+      <PackageReference Include="GeometryDashAPI" Version="0.2.26" />
       <PackageReference Include="System.Drawing.Common" Version="6.0.0-preview.6.21352.12" />
     </ItemGroup>
 
