--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore ./ArtToGeometryDash.sln
       - name: publish
-        run: dotnet publish ./${{ matrix.project }}/${{ matrix.project }}.csproj -r ${{ matrix.runtime }} -p:Version=$TOOL_VERSION -p:PublishSingleFile=true --self-contained true
+        run: dotnet publish ./${{ matrix.project }}/${{ matrix.project }}.csproj -c Release -r ${{ matrix.runtime }} -p:Version=$TOOL_VERSION -p:PublishSingleFile=true --self-contained true
       - name: edit binaries
         run: |
           cd ./${{ matrix.project }}/bin/Release/net6.0/${{ matrix.runtime }}/publish
